deny-ephemeral-storage/workload.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-simple-example
spec:
  volumes:
  - name: cache-volume
    emptyDir: {}

  containers:
  - name: main-app
    image: quay.io/busybox:latest
    command: ["/bin/sh", "-c"]
    args:
      - |
        echo "Hello from the emptyDir!" > /my-data/hello.txt
        echo "File written. Now sleeping."
        sleep 3600
        
    volumeMounts:
    - name: cache-volume
      mountPath: /my-data
