deny-ephemeral-storage/policy.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: disallow-ephemeral-storage-emptydir-block
  namespace: rhacs-operator
spec:
  policyName: Disallow Ephemeral Storage (EmptyDir Block)
  description: Blocks deployments that use the EmptyDir volume type, a common form of ephemeral storage.
  rationale: EmptyDir volumes are temporary and are not suitable for production persistence, and unconstrained ephemeral storage requests can lead to resource instability.
  remediation: Replace EmptyDir volumes with appropriate PersistentVolumeClaims (PVCs) for storage.
  categories:
    - Configuration Management
  lifecycleStages:
    - DEPLOY
  eventSource: NOT_APPLICABLE
  scope:
    - namespace: rhacs-test-policies
  severity: HIGH_SEVERITY
  enforcementActions:
    - FAIL_DEPLOYMENT_CREATE_ENFORCEMENT
    - FAIL_DEPLOYMENT_UPDATE_ENFORCEMENT
    - SCALE_TO_ZERO_ENFORCEMENT
    - UNSATISFIABLE_NODE_CONSTRAINT_ENFORCEMENT
  policySections:
    - policyGroups:
        - fieldName: Volume Type
          booleanOperator: OR
          values:
            - value: EmptyDir
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
